Mon Aug 31 20:45:26 UTC 2009  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/src/Publication.cpp:
        * performance-tests/Bench/src/Publication.h:

          Remove the publications from the system after they finish
          publishing.

        * performance-tests/Bench/bin/run_test:

          Added ability to hit Enter to shutdown tests with no duration specified.

Fri Aug 28 23:15:06 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/InstanceState.cpp:

          Fixed minor issue where timer task was not properly being
          tracked.

        * bin/dcps_tests.lst:
        * tests/DCPS/ReaderDataLifecycle:
        * tests/DCPS/ReaderDataLifecycle/ReaderDataLifecycle.mpc:
        * tests/DCPS/ReaderDataLifecycle/main.cpp:
        * tests/DCPS/ReaderDataLifecycle/run_test.pl:
        * tests/DCPS/ReaderDataLifecycle/tcp.conf:

          Added new test for READER_DATA_LIFECYCLE QoS policy implementation.

Fri Aug 28 21:55:12 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/Presentation:
        * tests/DCPS/Presentation/Presentation.mpc:
        * tests/DCPS/Presentation/main.cpp:
        * tests/DCPS/Presentation/run_test.pl:
        * tests/DCPS/Presentation/tcp.conf:

          Added new tests for PRESENTATION QoS policy implementation.

Fri Aug 28 19:30:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/SubscriptionInstance.h:
        * tests/DCPS/TimeBasedFilter/main.cpp:

          Final round of updates to TIME_BASED_FILTER implementation and
          testing.

Fri Aug 28 16:56:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Qos_Helper.inl:
        * tests/DCPS/TimeBasedFilter/main.cpp:

          Fixes to GCC warnings.

Thu Aug 27 22:31:11 UTC 2009  Steven Stallion  <stallions@ociweb.com>
